@@ -1,0 +1,70 @@
+/*
+* xFMS.cpp
+*
+Custom classes and functions for the TBG X-Plane FMS interaction
+*
+*/
+
+/* My precompiled headers */
+#include "stdafx.h"
+
+/* xFMS header */
+#include "xFMS.h"
+
+/* Unique Namespace for our plugins */
+namespace Xtbg
+{
+
+	using namespace std;										// Strings etc are in namespace std
+
+	/////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+	/* Class xFMS
+	*
+	* Obj for FMS interaction
+
+	/* Constructors */
+
+	xFMS::xFMS() { Initialise; }											// Empty constructor
+
+	/* Set/Get*/
+	
+
+	/* Functions */
+
+	/* Function set initial values*/
+	void xFMS::Initialise()
+	{
+
+	}
+
+
+
+
+
+
+
+
+	/*
+	*
+	* End of class xFMS
+	*
+	*/
+
+	//////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+}
+/* End of Namespace Xtbg */
