@@ -19,7 +19,7 @@
 
 	using namespace std;
 
-	/* Custom namespace for our library */
+	/* Custom namespace for our plugins */
 	namespace Xtbg
 	{
 		/////////////////////////////////////////////////////////////////////////////////////////////////////////////
